Move to CrombyAM

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,7 @@
-<h3>Reference data management prototype</h3>
 <p>Cromby is currently under development</p>
+<h3>Reference data management</h3>
+<%= link_to "Reference Data", ref_data_tables_path %><br />
+<%= link_to "Data Status Codes", data_statuses_path %>
 <hr />
 <p>Cromby - Relationship Management <%= cromby_version %> </p>
 
