--- a/app/views/home/login.html.erb
+++ b/app/views/home/login.html.erb
@@ -1,34 +1,19 @@
+<% action_style "index" %>
   <% form_tag do %>
-    <fieldset>
+    <p>
+      <label for="name">Username:</label>
+      <%= text_field_tag :user_name, params[:user_name] %>
+    </p>
 
-      <div>
-        <label for="name">Username:</label>
-        <%= text_field_tag :user_name, params[:user_name] %>
-      </div>
+    <p>
+      <label for="password">Password:</label>
+      <%= password_field_tag :password, params[:password] %>
+    </p>
 
-      <div>
-        <label for="password">Password:</label>
-        <%= password_field_tag :password, params[:password] %>
-      </div>
+    <p>
+      <%= submit_tag "Login" %>
+    </p>
 
-      <% if @days_til_expiry then %>
-        <%=h @days_til_expiry %>
-        <div>
-          <label for="password">New Password:</label>
-          <%= password_field_tag :new_password, params[:new_password] %>
-        </div>
-        <div>
-          <label for="password">Confirmation:</label>
-          <%= password_field_tag :new_password_confirmation, params[:new_password_confirmation] %>
-        </div>
-        <div>
-          <%= submit_tag "Change" %>
-        </div>
-      <%  else %>
-        <div>
-          <%= submit_tag "Login" %>
-        </div>
-      <% end %>
-
-    </fieldset>
   <% end %>
+
+<hr />
