Ref table maintenance

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,9 @@
   </head>
   <body>
     <img src="/images/cromby.png" alt="Cromby - open-source relationship management system" />
+    <div id="top-menu">
+      <%= link_to 'Log out', logout_path %><br/>
+    </div>
     <hr />
 
     <p style="color: green"><%= flash[:notice] %></p>
