--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,8 +2,10 @@
 <h3>Reference data management</h3>
 <%= link_to "Reference Data", ref_data_tables_path %><br />
 <%= link_to "Data Status Codes", data_statuses_path %>
-<hr />
-<p>Cromby - Relationship Management <%= cromby_version %> </p>
+<div id="lower-menu">
+  <p>Cromby - Relationship Management <%= cromby_version %> </p>
+</div>
+
 
 <p>Copyright &copy; 2010  Phil Goldsbrough - <%= link_to "www.japhigo.org", "http://www.japhigo.org/" %></p>
 
