--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,7 +1,7 @@
 /* Styles for reference data lists */
 
 #ref-index th {
-    background-color: #0CF;
+    background-color: #99CCFF;
     text-align: left;
 }
 
@@ -18,7 +18,7 @@
 }
 
 #ref-index .index-line-even {
-  background-color: #CFF;
+  background-color: #CCFFFF;
 }
 
 #ref-index .index-line-odd {
