--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,8 @@
   <body>
     <img src="/images/cromby.png" alt="Cromby - open-source relationship management system" />
     <div id="top-menu">
-      <%= link_to 'Log out', logout_path %><br/>
+      <p><%= link_to 'Log out', logout_path %></p>
     </div>
-    <hr />
 
     <p style="color: green"><%= flash[:notice] %></p>
 
