--- a/app/views/ref_data_tables/index.html.erb
+++ b/app/views/ref_data_tables/index.html.erb
@@ -19,8 +19,8 @@
     <% end %>
   </table>
 
-  <br />
-  <hr />
-
-  <%= link_to 'Home', :controller => "home" %>
+</div>
+<br/>
+<div id="lower-menu">
+  <p><%= link_to 'Home', :controller => "home" %></p>
 </div>
