--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -4,12 +4,26 @@ body {
     font-family: tahoma, verdana, arial, helvetica, sans_serif;
 }
 
-#top-menu .right {
+#top-menu p {
   text-align: right;
+  font-size: small;
+  border-bottom: 1px solid #99CCFF;
+  border-top: 2px solid #99CCFF;
 }
 
 #top-menu a {
   font-size: small;
-  position:fixed;
-  right:5px;
+  text-decoration:none;
+}
+
+#lower-menu p {
+  text-align: left;
+  font-size: small;
+  border-top: 1px solid #99CCFF;
+  border-bottom: 2px solid #99CCFF;
+}
+
+#lower-menu a {
+  font-size: small;
+  text-decoration:none;
 }
