--- a/app/views/contact_point_usage_types/edit.html.erb
+++ b/app/views/contact_point_usage_types/edit.html.erb
@@ -34,7 +34,8 @@
     <%= f.submit 'Update' %>
   </p>
 <% end %>
-
-<hr />
-<%= link_to 'Show', @contact_point_usage_type %> |
-<%= link_to 'Back', contact_point_usage_types_path %>
+<br/>
+<div id="lower-menu">
+  <p><%= link_to 'Show', @contact_point_usage_type %> &middot;
+<%= link_to 'Back', contact_point_usage_types_path %></p>
+</div>
