--- a/app/views/contact_point_usage_types/index.html.erb
+++ b/app/views/contact_point_usage_types/index.html.erb
@@ -31,11 +31,10 @@
       </tr>
     <% end %>
   </table>
-
-  <br />
-
+  <br/>
   <%= link_to 'New', new_contact_point_usage_type_path %>
-  <hr />
-  <%= link_to 'Reference Data Tables', ref_data_tables_path %> |
-  <%= link_to 'Home', :controller => "home" %>
+</div>
+<div id="lower-menu">
+  <p><%= link_to 'Reference Data Tables', ref_data_tables_path %> &middot;
+  <%= link_to 'Home', :controller => "home" %></p>
 </div>
