--- a/app/views/contact_point_usage_types/new.html.erb
+++ b/app/views/contact_point_usage_types/new.html.erb
@@ -23,5 +23,6 @@
     <%= f.submit 'Create' %>
   </p>
 <% end %>
-
-<%= link_to 'Back', contact_point_usage_types_path %>
+<div id="lower-menu">
+  <p><%= link_to 'Back', contact_point_usage_types_path %></p>
+</div>
