--- a/app/views/data_statuses/index.html.erb
+++ b/app/views/data_statuses/index.html.erb
@@ -17,10 +17,8 @@
       </tr>
     <% end %>
   </table>
-
-  <br />
-  <hr />
-
-  <%= link_to 'Home', :controller => "home" %>
-
+</div>
+<br />
+<div id="lower-menu">
+  <p><%= link_to 'Home', :controller => "home" %></p>
 </div>
