--- a/app/views/data_statuses/show.html.erb
+++ b/app/views/data_statuses/show.html.erb
@@ -29,5 +29,7 @@
   <b>Updated date time:</b>
   <%=h @data_status.updated_date_time %>
 </p>
-
-<%= link_to 'Back', data_statuses_path %>
+<br />
+<div id="lower-menu">
+  <p><%= link_to 'Back', data_statuses_path %></p>
+</div>
