--- a/app/views/genders/edit.html.erb
+++ b/app/views/genders/edit.html.erb
@@ -33,6 +33,8 @@
     <%= f.submit 'Update' %>
   </p>
 <% end %>
-<hr />
-<%= link_to 'Show', @gender %> |
-<%= link_to 'Back', genders_path %>
+  <br/>
+<div id="lower-menu">
+  <p><%= link_to 'Show', @gender %> &middot;
+<%= link_to 'Back', genders_path %></p>
+</div>
