--- a/app/views/genders/index.html.erb
+++ b/app/views/genders/index.html.erb
@@ -35,7 +35,8 @@
   <br />
 
   <%= link_to 'New', new_gender_path %>
-  <hr />
-  <%= link_to 'Reference Data Tables', ref_data_tables_path %> |
-  <%= link_to 'Home', :controller => "home" %>
+</div>
+<div id="lower-menu">
+  <p><%= link_to 'Reference Data Tables', ref_data_tables_path %> &middot;
+     <%= link_to 'Home', :controller => "home" %></p>
 </div>
