--- a/app/views/genders/new.html.erb
+++ b/app/views/genders/new.html.erb
@@ -23,5 +23,6 @@
     <%= f.submit 'Create' %>
   </p>
 <% end %>
-
-<%= link_to 'Back', genders_path %>
+<div id="lower-menu">
+  <p><%= link_to 'Back', genders_path %></p>
+</div>
