--- a/app/views/home/logout.html.erb
+++ b/app/views/home/logout.html.erb
@@ -1,5 +1,5 @@
 <% action_style "index" %>
-<h3>You are now logged out of Cromby</h3>
-<%= link_to 'Log in again', login_path %>
+<h3>Confirm</h3>
+<%= link_to 'Log out', logout_path %>
 
 <hr />
