--- a/app/views/home/login.html.erb
+++ b/app/views/home/login.html.erb
@@ -16,4 +16,17 @@
 
   <% end %>
 
-<hr />
+<p>Copyright &copy; 2010  Phil Goldsbrough - <%= link_to "www.japhigo.org", "http://www.japhigo.org/" %></p>
+
+<p>This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.</p>
+
+<p>This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.</p>
+
+<p>You should have received a copy of the GNU General Public License
+    along with this program.  If not, see <%= link_to "www.gnu.org", "http://www.gnu.org/licenses/"%>.</p>
