--- a/app/views/home/logout.html.erb
+++ b/app/views/home/logout.html.erb
@@ -1,5 +1,5 @@
 <% action_style "index" %>
 <h3>Confirm</h3>
-<%= link_to 'Log out', logout_path %>
+<%= link_to 'Log out', confirm_logout_path %>
 
 <hr />
