Login/out page changes

--- a/app/views/home/login.html.erb
+++ b/app/views/home/login.html.erb
@@ -16,7 +16,11 @@
 
   <% end %>
 
-<p>Copyright &copy; 2010  Phil Goldsbrough - <%= link_to "www.japhigo.org", "http://www.japhigo.org/" %></p>
+<div id="lower-menu">
+  <p>Cromby - Relationship Management <%= cromby_version %> </p>
+</div>
+<br/>
+<p>Copyright &copy; 2010  Phil Goldsbrough - <%= link_to "www.japhigo.com", "http://www.japhigo.com/" %></p>
 
 <p>This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
