--- a/app/views/home/logout.html.erb
+++ b/app/views/home/logout.html.erb
@@ -1,5 +1,6 @@
 <% action_style "index" %>
-<h3>Confirm</h3>
+<h3>Confirm log out</h3>
 <%= link_to 'Log out', confirm_logout_path %>
-
-<hr />
+<div id="lower-menu">
+  <p><%= link_to 'Home', :controller => "home" %></p>
+</div>
