Playing with look and fel

--- a/app/views/layouts/logout_page.html.erb
+++ b/app/views/layouts/logout_page.html.erb
@@ -16,7 +16,7 @@
   <body>
     <img src="/images/cromby.png" alt="Cromby - open-source relationship management system" />
     <div id="top-menu">
-      <p>Cromby</p>
+      <p>Cromby Administration Module</p>
     </div>
 
     <p style="color: green"><%= flash[:notice] %></p>
