--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,10 @@
 <p>Cromby is currently under development</p>
-<h3>Reference data management</h3>
+<h2>Reference data management</h2>
 <%= link_to "Reference Data", ref_data_tables_path %><br />
 <%= link_to "Data Status Codes", data_statuses_path %>
+<h2>Cromby system administration</h2>
+<h2>Employee administration</h2>
+<h2>Security administration</h2>
 <div id="lower-menu">
   <p>Cromby - Relationship Management <%= cromby_version %> </p>
 </div>
